# NER-CTI

./: .gitignore  NER-CTI.ipynb  README.md  Thoughts.txt  project.yml  pyproject.toml
configs/: base_config.cfg  classic_model_config.cfg  training_config.cfg
models/classic/model-best/: config.cfg  meta.json
models/classic/model-last/: meta.json
models/foundation/model-best/: config.cfg  meta.json
models/foundation/model-last/: meta.json
notebooks/: data_observation.ipynb
notebooks/CTI/: data_observation.ipynb
notebooks/Example/: example_training.ipynb
tmp/notebooks/: data_observation.ipynb
tmp/notebooks/CTI/: bio.spacy  bio.txt  data_observation.ipynb  ner-cti-training.ipynb  test.spacy  train.spacy  valid.spacy
tmp/notebooks/CTI/conf/: config.cfg
tmp/notebooks/Example/: bio.json  example_training.ipynb
tmp/notebooks/Example/conf/: base_config.cfg
tmp/notebooks/Example/data/: training_data.spacy
tmp/tagger_parser_ud/: project.yml
