[tool.poetry]
name = "ner-cti"
version = "0.1.0"
description = ""
authors = ["feger <marc.feger@uni-duesseldorf.de>"]

[tool.poetry.dependencies]
python = "^3.10"
spacy = {extras = ["transformers", "lookups"], version = "^3.5.0"}
spacy-lookups-data = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
